[package]
name = "backend"
version = "0.1.6"
authors = [
    "bvssvni <bvssvni@gmail.com>",
]
keywords = ["backend", "macro", "piston"]
description = "A macro library for backend agnostic design"
license = "MIT"
repository = "https://github.com/PistonDevelopers/backend.git"
homepage = "https://github.com/PistonDevelopers/backend"

[lib]
name = "backend"
path = "./src/lib.rs"

[dependencies]
gfx = "0.8.1"
gfx_device_gl = "0.7.0"
